[tool.poetry]
name = "ml4gw-examples"
version = "0.0.1"
description = "Example notebooks for ML4GW ecosystem"
authors = ["Alec Gunny <alecg@mit.edu>"]
packages = [
    {include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
bokeh = "^2.4"
jupyter = "^1.0"

# constraining rich due to this issue
# https://github.com/Textualize/rich/issues/2740
rich = {version = "<12.6.0", extras = ["jupyter"]}

# Constraining scipy due to an incompatability
# with astropy which should be fixed once this PR gets
# into a release https://github.com/astropy/astropy/pull/14232
scipy = "<1.10"

# ML-specific dependencies. Technically the torch dependency
# is inherited through ml4gw, but we specify it here so that
# we can control which source repo torch gets built from
# (one that gives GPU support for CUDA 11.6)
torch = {version = "^1.12", source = "torch"}
torchmetrics = "^0.11"
ml4gw = {git = "https://github.com/ml4gw/ml4gw.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20"
pytest = "^6.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''


[tool.isort]
known_first_party = ["ml4gw", "example"]
multi_line_output = 3
include_trailing_comma = true
